--- a/itemsproject/appsettings.json
+++ b/itemsproject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "Server=127.0.0.1,1433;Database=ItemsDb;User Id=SA;Password=MyPass@word;Integrated security=False;TrustServerCertificate=True;",
+    "MyConnection": "Server=LARA\\SQL2025;Database=itemApp;Integrated Security=True;TrustServerCertificate=True;",
     "itemsprojectContextConnection": "Server=(localdb)\\mssqllocaldb;Database=itemsproject;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
