Remove database connection strings from appsettings
Cleared connection strings for MyConnection and itemsprojectContextConnection.

--- a/itemsproject/appsettings.json
+++ b/itemsproject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "Server=LARA\\SQL2025;Database=itemApp;Integrated Security=True;TrustServerCertificate=True;",
-    "itemsprojectContextConnection": "Server=(localdb)\\mssqllocaldb;Database=itemsproject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyConnection": "",
+    "itemsprojectContextConnection": ""
   }
 }
