Refactor .gitattributes for clarity and efficiency
Updated .gitattributes to remove unnecessary comments and streamline vendor exclusions.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,99 +1,14 @@
-###############################################################################
-# Set default behavior to automatically normalize line endings.
-###############################################################################
+# Normalisation des fins de ligne
 * text=auto
 
-###############################################################################
-# Set default behavior for command prompt diff.
-#
-# This is need for earlier builds of msysgit that does not have it on by
-# default for csharp files.
-# Note: This is only used by command line
-###############################################################################
-#*.cs     diff=csharp
-
-###############################################################################
-# Set the merge driver for project and solution files
-#
-# Merging from the command prompt will add diff markers to the files if there
-# are conflicts (Merging from VS is not affected by the settings below, in VS
-# the diff markers are never inserted). Diff markers may cause the following 
-# file extensions to fail to load in VS. An alternative would be to treat
-# these files as binary and thus will always conflict and require user
-# intervention with every merge. To do so, just uncomment the entries below
-###############################################################################
-#*.sln       merge=binary
-#*.csproj    merge=binary
-#*.vbproj    merge=binary
-#*.vcxproj   merge=binary
-#*.vcproj    merge=binary
-#*.dbproj    merge=binary
-#*.fsproj    merge=binary
-#*.lsproj    merge=binary
-#*.wixproj   merge=binary
-#*.modelproj merge=binary
-#*.sqlproj   merge=binary
-#*.wwaproj   merge=binary
-
-###############################################################################
-# behavior for image files
-#
-# image files are treated as binary by default.
-###############################################################################
-#*.jpg   binary
-#*.png   binary
-#*.gif   binary
-
-###############################################################################
-# diff behavior for common document formats
-# 
-# Convert binary document formats to text before diffing them. This feature
-# is only available from the command line. Turn it on by uncommenting the 
-# entries below.
-###############################################################################
-#*.doc   diff=astextplain
-#*.DOC   diff=astextplain
-#*.docx  diff=astextplain
-#*.DOCX  diff=astextplain
-#*.dot   diff=astextplain
-#*.DOT   diff=astextplain
-#*.pdf   diff=astextplain
-#*.PDF   diff=astextplain
-#*.rtf   diff=astextplain
-#*.RTF   diff=astextplain
-###############################################################################
-wwwroot/lib/** linguist-vendored
-wwwroot/css/**/*.min.css linguist-vendored
-wwwroot/css/bootstrap* linguist-vendored
-wwwroot/css/site.css linguist-vendored
-
-# Ignorer les fichiers CSS/JS tiers et générés pour GitHub Linguist
-###############################################################################
-
-# Dossier des bibliothèques front-end (Bootstrap, jQuery, etc.)
-wwwroot/lib/** linguist-vendored
-
-# Exclure ce fichier CSS volumineux des statistiques de langage
+# Exclure les bibliothèques front-end et fichiers tiers/générés des statistiques Linguist
+/wwwroot/lib/** linguist-vendored
 /wwwroot/css/Bootstrapstyle.css linguist-vendored
+/wwwroot/css/*.min.css linguist-vendored
+/wwwroot/css/bootstrap* linguist-vendored
+/wwwroot/css/site.css linguist-vendored
+/wwwroot/js/*.min.js linguist-vendored
 
-# ou pour tout le dossier CSS
-/wwwroot/css/* linguist-vendored
-# Fichiers CSS générés ou standards
-wwwroot/css/**/*.min.css linguist-vendored
-wwwroot/css/bootstrap* linguist-vendored
-wwwroot/css/site.css linguist-vendored
-
-# Fichiers JavaScript générés
-wwwroot/js/**/*.min.js linguist-vendored
-
-# Fichiers des pages Identity
+# Fichiers générés / non représentatifs
 Areas/Identity/** linguist-vendored
-
-# Fichiers de migration EF Core (non représentatifs du code applicatif)
 Migrations/** linguist-vendored
-
-###############################################################################
-# Prioriser le code C#
-###############################################################################
-*.cs linguist-detectable=true
-*.cshtml linguist-language=HTML
